<resources>
    <string name="app_name">ParentEase</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="my_profile">My Profile</string>
    <string name="name">Name</string>
    <string name="id">ID</string>
    <string name="gender">Gender</string>
    <string name="brith_date">Brith Date</string>
    <string name="location">Location</string>
    <string name="add_picture">Add Picture</string>
    <string name="add_a_title">Add a title</string>
    <string name="add_text_here">Add text here</string>
    <string name="pediatricians">Pediatricians</string>
    <string name="daycare">Daycare</string>
    <string name="event_info">Event Info</string>
    <string name="post">Post</string>
    <string name="add_content_here">Add Content Here</string>
    <string name="title">Title:</string>
    <string name="user_name">User Name:</string>
    <string name="content">Content:</string>
    <string name="todo">TODO</string>
    <string name="add_a_comment">Add a comment</string>
    <string name="addComment">Add</string>
    <string name="tip_from">Tip From:</string>
    <string name="channel_name">ParentEaseChannelName</string>
    <string name="channel_description">ParentEaseChannelDescription</string>
    <string name="channel_id">ParentEaseChannelId</string>
</resources>